bdr.BDR.scala.error
Erreur de compilation :
BDR:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (mess = "R") {
           ^BDR:13: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "L") {
                ^BDR:18: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "I") {
                ^BDR:24: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "A") {
                ^BDR:28: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "B") {
                ^BDR:33: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "C") {
                ^BDR:39: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "Z") {
                ^BDR:43: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "Y") {
                ^BDR:48: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (mess = "X") {
                ^